<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_id">com.coveracademy</string>[
    <string name="app_name">Cover Academy</string>
    <string name="facebook_app_id">329761620528304</string>
    <string name="facebook_login_protocol_scheme">fb329761620528304</string>

    <string name="drawer_opened">Drawer Opened</string>
    <string name="drawer_closed">Drawer Closed</string>

    <!-- Activities titles -->
    <string name="activity_title_main">Cover Academy</string>
    <string name="activity_title_comments">Comments</string>
    <string name="activity_title_enter_contest">Enter the contest</string>

    <!-- Welcome activity -->
    <string name="activity_welcome_alert_error_authenticating">Couldn\'t authenticate, please try again later!</string>

    <!-- Main activity -->
    <string name="activity_main_tab_auditions">Auditions</string>
    <string name="activity_main_tab_contests">Contests</string>
    <string name="activity_main_bubble_separator">•</string>
    <string name="activity_main_dialog_logout_title">Logout</string>
    <string name="activity_main_dialog_logout_message">Do you really want to logout?</string>
    <string name="activity_main_alert_error_loading_auditions">Couldn\'t load auditions, please try again later!</string>
    <string name="activity_main_alert_error_loading_contests">Couldn\'t load contests, please try again later!</string>
    <string name="activity_main_alert_error_authenticating_user">Couldn\'t authenticate, please try again later!</string>

    <!-- User activity -->
    <string name="activity_user_fans">Fans</string>
    <string name="activity_user_videos">Videos</string>
    <string name="activity_user_idols">Idols</string>
    <string name="activity_user_i_am_a_fan">I\'m a fan</string>
    <string name="activity_user_become_fan">Become a fan</string>
    <string name="activity_user_alert_error_loading_user">Couldn\'t load user, please try again later!</string>

    <!-- Contest activity -->
    <string name="activity_contest_days_remaining">%1$dD</string>
    <string name="activity_contest_hours_remaining">%1$dH</string>
    <string name="activity_contest_minutes_remaining">%1$dM</string>
    <string name="activity_contest_seconds_remaining">%1$dS</string>
    <string name="activity_contest_alert_error_loading_contest">Couldn\'t load contest, please try again later!</string>

    <!-- Comments activity -->
    <string name="activity_comments_type_a_message">Type a message…</string>
    <string name="activity_comments_alert_error_sending_comment">Couldn\'t send comment, please try again later!</string>
    <string name="activity_comments_alert_error_loading_comments">Couldn\'t load comments, please try again later!</string>

    <!-- Enter contest activity -->
    <string name="activity_enter_contest_select_video">Select a video</string>
    <string name="activity_enter_contest_submit">Submit</string>
    <string name="activity_enter_contest_close">Close</string>
    <string name="activity_enter_contest_no_contests_available">No contests available now.</string>
    <string name="activity_enter_contest_video_being_uploaded">Your video is being uploaded, please wait a moment.</string>
    <string name="activity_enter_contest_video_uploaded">Video uploaded with success. Please wait while we confirm your video.</string>
    <string name="activity_enter_contest_uploading_video">Uploading video…</string>
    <string name="activity_enter_contest_alert_error_loading">Couldn\'t load available contests, please try again later!</string>
    <string name="activity_enter_contest_alert_error_loading_selected_video">Couldn\'t load selected video, please try again later!</string>
    <string name="activity_enter_contest_alert_error_uploading_video">Couldn\'t upload video, please try again later!</string>

    <!-- Alerts -->
    <string name="message_no_internet_connection">Your internet connection was lost</string>
    <string name="message_no_internet_access">Ops! It seems that you have no internet access. Can you check this?</string>
    <string name="message_connection_timeout">The connection to our servers took too long, is your internet connection OK?</string>
    <string name="message_authentication_error">Couldn\'t authenticate your account, please try again later!</string>

    <!-- Menus -->
    <string name="menu_edit_profile">Edit profile</string>
    <string name="menu_share">Share</string>
    <string name="menu_rate_us">Rate us</string>
    <string name="menu_contact_us">Contact us</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_logout">Logout</string>

    <!-- Dialogs -->
    <string name="dialog_positive_button">YES</string>
    <string name="dialog_negative_button">NO</string>
    <string name="dialog_wait_a_moment">Wait a moment…</string>

    <!-- Commons -->
    <string name="in_contest">In contest</string>
    <string name="join_contest">Join contest</string>
    <string name="total_auditions">%1$s auditions</string>
    <string name="vote">Vote</string>
    <string name="winners">Winners</string>
    <string name="select_video">Select a video</string>
    <string name="total_likes">%1$d likes</string>
    <string name="total_comments">%1$d comments</string>
    <string name="finished">Finished</string>
    <string name="share_video_title">Share this video!</string>
    <string name="share_video_description">I\'m attending a music competition. Please help me win by liking this video.\n%1$s</string>
    <string name="share_video_description_other_user">%1$s attending a music competition. Please help %2$s win by liking this video.\n%3$s</string>
    <string name="alert_error_liking_video">Couldn\'t like video, please try again later!</string>
    <string name="alert_error_becoming_user_fan">Couldn\'t became a fan, please try again later!</string>
    <string name="alert_error_removing_user_fan">Couldn\'t remove you as fan, please try again later!</string>

</resources>
