<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/content_margin"
    android:layout_marginLeft="-3dp"
    android:layout_marginStart="-3dp"
    android:layout_marginRight="-3dp"
    android:layout_marginEnd="-3dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardUseCompatPadding="true"
    app:cardPreventCornerOverlap="false"
    app:cardCornerRadius="0dp"
    app:cardElevation="2dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/content_margin"
        android:paddingBottom="@dimen/content_margin_double">

        <LinearLayout
            android:id="@+id/user"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="@dimen/content_margin_double"
            android:paddingStart="@dimen/content_margin_double"
            android:paddingRight="@dimen/content_margin_double"
            android:paddingEnd="@dimen/content_margin_double">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/user_picture"
                android:layout_width="@dimen/picture_small"
                android:layout_height="@dimen/picture_small"
                android:src="@drawable/no_picture"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginLeft="@dimen/content_margin"
                android:layout_marginStart="@dimen/content_margin"
                android:layout_gravity="center_vertical">

                <TextView
                    android:id="@+id/user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/primary_text"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_normal"
                    android:textAllCaps="false"/>

                <TextView
                    android:id="@+id/date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:textSize="@dimen/text_micro"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/fan"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/content_margin"
                android:layout_marginStart="@dimen/content_margin"
                android:layout_gravity="center_vertical"
                android:src="@drawable/fan"/>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/content_margin">

            <ImageView
                android:id="@+id/thumbnail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"/>

            <ImageView
                android:id="@+id/play_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:src="@drawable/player_overlay"/>

            <VideoView
                android:visibility="gone"
                android:id="@+id/stream"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"/>

        </FrameLayout>

        <LinearLayout
            android:id="@+id/contest"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/content_margin"
            android:paddingLeft="@dimen/content_margin_double"
            android:paddingStart="@dimen/content_margin_double"
            android:paddingRight="@dimen/content_margin"
            android:paddingEnd="@dimen/content_margin"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/contest_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/text_medium"/>

        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/content_margin"
            android:paddingLeft="@dimen/content_margin_double"
            android:paddingStart="@dimen/content_margin_double"
            android:paddingRight="@dimen/content_margin"
            android:paddingEnd="@dimen/content_margin"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/like"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@drawable/no_like"/>

            <ImageView
                android:id="@+id/comment"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/content_margin_double"
                android:layout_marginStart="@dimen/content_margin_double"
                android:src="@drawable/comment"/>

            <ImageView
                android:id="@+id/share"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginLeft="@dimen/content_margin_double"
                android:layout_marginStart="@dimen/content_margin_double"
                android:src="@drawable/forward"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/status"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="@dimen/content_margin"
            android:paddingLeft="@dimen/content_margin_double"
            android:paddingStart="@dimen/content_margin_double"
            android:paddingRight="@dimen/content_margin"
            android:paddingEnd="@dimen/content_margin"
            android:gravity="center_vertical">

            <TextView
                android:id="@+id/total_likes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_likes"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_small"
                android:textAllCaps="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/activity_main_bubble_separator"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_small"
                android:textAllCaps="false"/>

            <TextView
                android:id="@+id/total_comments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/total_comments"
                android:textColor="@color/primary_text"
                android:textSize="@dimen/text_small"
                android:textAllCaps="false"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>